--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <body>
     <main class="container">
       <h1>Border Radious Previewer</h1>
-      <div class="borders"></div>
+      <div class="borders" contenteditable="true">Clique aqui.</div>
+      <span class="result">border</span>
+      <button class="copy-clipboard">Copy</button>
     </main>
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
