ajustes de estilizaçao

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <main class="container">
       <h1>Border Radious Previewer</h1>
-      <div class="borders">Clique aqui.</div>
-      <input type="text" id="input-border" />
+      <div class="my-square"></div>
+      <input type="text" class="input-border" />
       <button class="copy-clipboard">Copy</button>
     </main>
     <script type="module" src="./js/script.js"></script>
