ajustes de estilizaçao

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <main class="container">
-      <h1>Border Radious Previewer</h1>
+      <h1 class="gradient">Border Radius Previewer</h1>
       <div class="my-square"></div>
-      <input type="text" class="input-border" />
-      <button class="copy-clipboard">Copy</button>
+      <div class="interactions">
+        <input type="text" class="input-border" />
+        <button class="copy-clipboard">copy</button>
+      </div>
     </main>
+    <!-- <div class="toast">Copiado!</div> -->
     <script type="module" src="./js/script.js"></script>
   </body>
 </html>
