adicionado simples toast

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <input type="text" class="input-border" />
         <button class="copy-clipboard">copy</button>
       </div>
+      <div class="warning-copied"><p>Copiado!</p></div>
     </main>
-    <!-- <div class="toast">Copiado!</div> -->
     <script type="module" src="./js/script.js"></script>
   </body>
 </html>
